--- a/app/src/main/res/layout/window0.xml
+++ b/app/src/main/res/layout/window0.xml
@@ -3,5 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:gravity="center"
+        android:text="Dre / 180709900"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="40dp" />
 </LinearLayout>
